cabal-version:      2.4
name:               hledger-toolbox
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Liren Zhu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Ynab
        Ynab.Db
        Ynab.Types
        Ynab.Req
        Ynab.ReqApp
        Ynab.STExcept

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        OverloadedStrings
        NamedFieldPuns
        DeriveAnyClass
        DeriveGeneric
        DataKinds
    build-depends:
        aeson ^>=2.0,
        base ^>=4.14,
        bytestring ^>= 0.10.12,
        containers ^>=0.6,
        exceptions ^>=0.10,
        directory ^>=1.3.6,
        filepath ^>=1.4.2,
        http-client ^>=0.7.9,
        modern-uri ^>=0.3.4,
        mtl ^>=2.2,
        req ^>=3.9.2,
        sqlite-simple ^>=0.4.18,
        text ^>= 1.2,
        hledger-lib ^>= 1.24
    hs-source-dirs:   src
    default-language: Haskell2010

executable ynab_import
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        OverloadedStrings
    build-depends:
        base ^>=4.14,
        exceptions ^>=0.10,
        mtl ^>=2.2,
        hledger-toolbox,
        text ^>= 1.2

    hs-source-dirs:   app/ynab_import
    default-language: Haskell2010

test-suite hledger-toolbox-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          YnabTest.hs
    default-extensions:
        OverloadedStrings
    build-depends:
        aeson ^>=2.0,
        base ^>=4.14,
        bytestring ^>=0.10.12.0,
        hledger-toolbox,
        tasty ^>=1.4.2.1,
        tasty-hunit ^>=0.10.0.3,
        text ^>= 1.2
