cabal-version:      2.4
name:               hledger-toolbox
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Liren Zhu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Hledger.Utils.Render
        Paycheck
        Paycheck.Hledger
        Paycheck.Parser
        Paycheck.Types
        StockPrices.AlphaVantage
        StockPrices.Db
        StockPrices.Hledger
        StockPrices.Types
        Utils
        Ynab
        Ynab.Db
        Ynab.Hledger
        Ynab.Types
        Ynab.Req
        Ynab.ReqApp
        Ynab.STExcept

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        OverloadedStrings
        NamedFieldPuns
        DeriveAnyClass
        DeriveGeneric
        DataKinds
    build-depends:
        Decimal >=0.5.1,
        Glob >=0.10.2,
        aeson >=2.0,
        base >=4.14,
        bytestring >= 0.10.12,
        containers >=0.6,
        exceptions >=0.10,
        data-default <1,
        directory >=1.3.6,
        filepath >=1.4.2,
        http-client >=0.7.9,
        modern-uri >=0.3.4,
        monad-logger >=0.3.36,
        mtl >=2.2,
        process >=1.6.13,
        regex-base >=0.94.0,
        regex-pcre-builtin >=0.95.2,
        req >=3.9.2,
        safe >=0.3.5 && <1,
        split <1,
        sqlite-simple >=0.4.18,
        text >= 1.2,
        text-show >=3.9,
        time >=1.9.3,
        unordered-containers <0.3,
        hledger-lib >= 1.27
    hs-source-dirs:   src
    default-language: Haskell2010

executable paycheck_import
    main-is: Main.hs
    other-modules:
        Params
    default-extensions:
        OverloadedStrings
    build-depends:
        Glob >=0.10.2,
        base >=4.14,
        hledger-toolbox,
        hledger-lib >= 1.27,
        optparse-applicative >=0.16.1,
        text >= 1.2,
        time >=1.9.3
    hs-source-dirs:   app/paycheck_import
    default-language: Haskell2010

executable ynab_import
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Params

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        OverloadedStrings
    build-depends:
        base >=4.14,
        exceptions >=0.10,
        mtl >=2.2,
        hledger-toolbox,
        hledger-lib >= 1.27,
        optparse-applicative >=0.16.1,
        text >= 1.2

    hs-source-dirs:   app/ynab_import
    default-language: Haskell2010

executable stockprices
    main-is:          Main.hs

    other-modules:
        Config,
        Utils

    build-depends:
        aeson >=1 && <3,
        base >=4.14,
        bytestring <1,
        directory <2,
        hledger-toolbox,
        hledger-lib >= 1.27,
        optparse-applicative >=0.16.1,
        safe-exceptions >0.1.7,
        text >=1.2,
        time <2,
        xdg-basedir <1,
        yaml <1

    hs-source-dirs: app/stockprices
    default-language: Haskell2010

test-suite ynab-lib-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests/Ynab
    main-is:          YnabTest.hs
    other-modules:
        YnabTypesJsonTest
        YnabDbTest
    default-extensions:
        OverloadedStrings
    build-depends:
        aeson >=2.0,
        base >=4.14,
        bytestring >=0.10.12.0,
        hledger-toolbox,
        sqlite-simple >=0.4.18,
        tasty >=1.4.2.1,
        tasty-hunit >=0.10.0.3,
        text >= 1.2,
        time >=1.9.3

test-suite stockprices-lib-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests/StockPrices
    main-is:          StockPricesTest.hs
    default-extensions:
        OverloadedStrings
    build-depends:
        aeson >=2.0,
        base >=4.14,
        bytestring >=0.10.12.0,
        hledger-toolbox,
        sqlite-simple >=0.4.18,
        tasty >=1.4.2.1,
        tasty-hunit >=0.10.0.3,
        text >= 1.2,
        time >=1.9.3
